Remove apache commons and deprecated methods dependency